// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OfficeGroupsContent should match a snapshot 1`] = `
<Fragment>
  <Component>
    <mock-styled.div>
      <Component
        columns={
          Array [
            Object {
              "Header": "Group Name",
              "accessor": "name",
            },
            Object {
              "Header": "Office List",
              "accessor": "officeIds",
            },
            Object {
              "Header": "Last Updated",
              "accessor": "description",
            },
            Object {
              "Header": "Edit",
            },
          ]
        }
        data={
          Array [
            Object {
              "created": "2019-08-14T12:30:02.0000000Z",
              "id": "string",
              "modified": "2019-08-14T12:30:02.0000000Z",
              "name": "string",
              "officeIds": "string",
              "organisationId": "string",
              "status": "string",
              "tag": "string",
            },
          ]
        }
        expandable={true}
        scrollable={true}
      />
    </mock-styled.div>
  </Component>
  <Component>
    <Component
      onChange={[Function]}
      pageNumber={0}
      pageSize={0}
      totalCount={0}
    />
  </Component>
</Fragment>
`;

exports[`OfficesGroupsTab should match a snapshot 1`] = `
<ErrorBoundary>
  <Component>
    <div
      className=""
    >
      <div
        className=""
      >
        <Component>
          Office groups
        </Component>
        <Component
          onClick={[Function]}
        >
          Create office group
        </Component>
      </div>
      <p
        className="helper-text"
      >
        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs.
      </p>
    </div>
  </Component>
  <Component
    columns={
      Array [
        Object {
          "Header": "Group Name",
          "accessor": "name",
        },
        Object {
          "Cell": [Function],
          "Header": "Office List",
          "accessor": "officeIds",
        },
        Object {
          "Cell": [Function],
          "Header": "Last Updated",
        },
        Object {
          "Cell": [Function],
          "Header": "Edit",
        },
      ]
    }
    data={
      Object {
        "_embedded": Array [
          Object {
            "created": "2019-08-14T12:30:02.0000000Z",
            "id": "string",
            "modified": "2019-08-14T12:30:02.0000000Z",
            "name": "string",
            "officeIds": "string",
            "organisationId": "string",
            "status": "string",
            "tag": "string",
          },
        ],
        "_links": Object {
          "additionalProp1": Object {
            "href": "string",
          },
          "additionalProp2": Object {
            "href": "string",
          },
          "additionalProp3": Object {
            "href": "string",
          },
        },
        "pageCount": 0,
        "pageNumber": 0,
        "pageSize": 0,
        "totalCount": 0,
        "totalPageCount": 0,
      }
    }
    onPageChange={[Function]}
  />
</ErrorBoundary>
`;
